# ctsa

./: .gitignore  CMakeLists.txt
data/: 1m-20241125_001625-20241125_165625.txt  ohlc_min.txt
doc/: 0001.json  ar.json  ctsa_tests.md  minunit_prez.md  test_gen_steps.md  test_params.db  test_params.sqbpro  test_params.sql
doc/img/: schema.dot  schema.sql
doc/test_gen/: .gitignore  TestGeneration.aux  TestGeneration.fdb_latexmk  TestGeneration.fls  TestGeneration.out  TestGeneration.tex  testgeneration.kilepr
doc/test_gen/.kile/: testgeneration.kilepr.gui
scratch/: datafiles.py  models.py  program_writer.py  test_wh.c  values.py
scratch/data/: test.csv
src/: ctsa_changed.c
test/: CMakeLists.txt  auxlib.c  auxlib.h  csv_in.c  csv_in.h  sarimatest.asan  sarimatest2.c  sarimatest3.c  sarimatest_changed.c
test_gen/: CMakeLists.txt  artest_templ.c  auxlib.c  cvt_test.py  run_test.py
testdata/: 0001.csv  0002.csv  0003.csv  0004.csv  0005.csv  0006.csv  0007.csv  0008.csv  0009.csv  0010.csv  0011.csv  0012.csv  0013.csv  0014.csv  0015.csv  0016.csv  0017.csv  0018.csv  0019.csv  0020.csv  0021.csv  0022.csv  0023.csv  0024.csv  0025.csv  0026.csv  0027.csv  CMakeLists.txt  artest_templ.c  auxlib.h  csv_in.c  csv_in.h  file_db.csv  sjson_macros.h
